--- a/src/index.css
+++ b/src/index.css
@@ -114,14 +114,17 @@ body {
   margin: 0 auto;
   padding-left: 20px;
   padding-right: 20px;
-
-  min-width: 280px;
-
-  @media screen and (min-width: 768px) {
-    width: 768px;
+}
+@media screen and (min-width: 767px) {
+  .Section {
+    padding-left: 90px;
+    padding-right: 90px;
   }
-  @media screen and (min-width: 1280px) {
-    width: 1280px;
+}
+@media screen and (min-width: 1279px) {
+  .Section {
+    padding-left: 50px;
+    padding-right: 50px;
   }
 }
 
