--- a/src/pages/ContactsPage/ContactsPageStyle.module.css
+++ b/src/pages/ContactsPage/ContactsPageStyle.module.css
@@ -3,7 +3,6 @@
   text-align: center;
   margin: 0 auto;
   padding-top: 40px;
-  padding-bottom: 50px;
 }
 
 .contacts_all_card {
@@ -14,7 +13,7 @@
 }
 
 .contacts_main_tittle {
-  font-family: "Montserrat";
+  font-family: inherit;
   font-style: normal;
   font-size: 26px;
   color: #000000;
@@ -23,7 +22,7 @@
 }
 
 .contacts_second_tittle {
-  font-family: "Montserrat";
+  font-family: inherit;
   font-style: normal;
   font-size: 14px;
   color: #000000;
@@ -37,7 +36,7 @@
   text-align: center;
   margin: 0 auto;
   background-color: #ffffff;
-  box-shadow: -3px 27px 64px -40px rgba(0, 0, 0, 0.72);
+  box-shadow: 4px 6px 15px rgba(0, 0, 0, 0.1);
   text-align: left;
   list-style: none;
   margin-bottom: 40px;
@@ -48,20 +47,24 @@
   transform: translateX(5px);
   border-radius: 7px;
 }
+.contacts_card:last-child {
+  margin-bottom: 0;
+}
 
 .contacts_img {
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   height: 287px;
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
   width: 100%;
   border-radius: 7px;
+  object-fit: cover;
 }
 
 .contacts_name {
   font-size: 11px;
-  font-family: "Montserrat";
+  font-family: inherit;
   font-style: normal;
   text-transform: uppercase;
   color: #000000;
@@ -77,7 +80,7 @@
 .contacts_possition,
 .contacts_mail {
   font-size: 11px;
-  font-family: "Montserrat";
+  font-family: inherit;
   font-style: normal;
   color: #858598;
   margin-bottom: 3px;
@@ -94,7 +97,7 @@
 .contacts_possition_describe {
   width: 228px;
   font-size: 12px;
-  font-family: "Montserrat";
+  font-family: inherit;
   font-style: normal;
   color: #000000;
   margin-left: 30px;
@@ -104,15 +107,12 @@
 }
 
 @media (min-width: 768px) {
-  .contacts {
-    padding-top: 80px;
-  }
   .contacts_all_card {
     width: 600px;
     flex-direction: row;
     flex-wrap: wrap;
+    margin-left: -10px;
   }
-
   .contacts_main_tittle {
     font-size: 36px;
   }
@@ -123,16 +123,16 @@
 }
 
 @media (min-width: 1280px) {
-  .contacts {
-    padding-top: 80px;
-  }
-
   .contacts_all_card {
     width: 1180px;
     flex-direction: row;
     flex-wrap: wrap;
+    margin-left: 0;
   }
 
+  .contacts_card:last-child {
+    margin-bottom: 40px;
+  }
   .contacts_main_tittle {
     font-size: 36px;
   }
